--- a/02-HTML-Fundamentals/style.css
+++ b/02-HTML-Fundamentals/style.css
@@ -1,7 +1,24 @@
-/* External CSS */
+* {
+    /* border-top: 10px solid #1098ad ; */
+}
 
-h1,h2,h3,h4,p,li{
+body{
     font-family: sans-serif;
+    color: #444;
+    border-top: 10px solid red ;
+}
+
+/* 
+External CSS
+ */
+
+/* h1,h2,h3,h4,p,li{
+    font-family: sans-serif;
+    color: #444;
+} */
+
+h1,h2,h3{
+    color: #1098ad;
 }
 
 h1 {
@@ -40,4 +57,102 @@ p {
 li{
  
     font-size : 20px;
+}
+
+/* footer p{
+    font-size: 16px;
+} */
+
+/* article header p{
+    font-style: italic;
+} */
+
+#author{
+    font-style: italic;
+font-size: 18px;
+}
+
+#copyright{
+    font-size: 16px;
+}
+
+.related-author{
+    font-size: 18px;
+    font-weight:bold;
+}
+/* 
+ul{
+    list-style: none;
+} */
+.related{
+    list-style: none;
+}
+
+.main-header{
+    background-color: #f7f7f7;
+}
+
+aside{
+    background-color: #f7f7f7;
+    border-top: 5px solid #1098ad;
+    border-bottom: 5px solid #1098ad;
+}
+
+/* .first-li{
+    font-weight: bold;
+} */
+
+li:first-child{
+    font-weight: bold;
+}
+li:last-child{
+    font-weight: bold;
+}
+li:nth-child(even){
+    /* color: red; */
+}
+article p:last-child{
+    /* color: red; */
+}
+
+a:link{
+    color: #1098ad;
+    text-decoration: none;
+}
+
+a:visited{color: #1098ad;}
+a:hover{
+    color: orangered;
+    font-weight: bold;
+    text-decoration: underline orangered;
+}
+
+a:active{
+    background-color: black;
+    font-style: italic;
+}
+
+#copyright{
+    color: red;
+}
+
+.copyright{
+    color: blue;
+}
+
+.text{
+    color: yellow;
+}
+
+footer p {
+    /* color: green !important; */
+}
+
+/* 
+nav a:link,nav p{
+    font-size: 18px;
+} */
+
+nav{
+    font-size: 18px;
 }
