--- a/02-HTML-Fundamentals/app.css
+++ b/02-HTML-Fundamentals/app.css
@@ -43,8 +43,16 @@ body{
 }
 
 .add-cart{
-    border-color: black;
+    border-color: #000;
     border: none;
     color: #fff;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
     
+}
+
+.add-cart:hover{
+    color: #000;
+background-color: #fff;
 }
