--- a/02-HTML-Fundamentals/app.css
+++ b/02-HTML-Fundamentals/app.css
@@ -1,13 +1,29 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
 body{
     font-family: sans-serif;
     line-height: 1.4;
 }
 
+.container{
+    /* width: 700px;
+    margin: 0 auto; */
+}
+
+
 .product{
     border: 4px solid black;
+    width: 825px;
+    margin: 50px auto;
 }
 
 .product-title{
+    /* margin-top: 0; */
+    padding: 15px;
     text-align: center;
     font-size: 22px;
     text-transform: uppercase;
@@ -23,10 +39,12 @@ body{
     text-transform: uppercase;
     font-weight: bold;
     color: #777;
+    margin-bottom: 20px;
 }
 
 .more-info:link,.more-info:visited  {
     color: black;
+    
 }
 
 .more-info:hover,.more-info:active{
@@ -36,23 +54,33 @@ body{
 .details-title{
     text-transform: uppercase;
     font-size: 16px;
+    margin-bottom: 15px;
+    margin-top: 30px;
 }
 
 .details-list{
     list-style: square;
+    margin-left: 20px;
+}
+
+.details-list li{
+    margin-bottom: 10px;
 }
 
 .add-cart{
-    border-color: #000;
+    border-color: #000; 
     border: none;
-    color: #fff;
+    /* color: #fff; */
     font-size: 20px;
     text-transform: uppercase;
     cursor: pointer;
+    padding: 15px;
+    width: 100%;  
     
 }
 
 .add-cart:hover{
     color: #000;
 background-color: #fff;
-}
+border: 4px solid black;
+ }
