--- a/02-HTML-Fundamentals/style.css
+++ b/02-HTML-Fundamentals/style.css
@@ -8,7 +8,8 @@ body{
     font-family: sans-serif;
     color: #444;
     border-top: 10px solid #1098ad ;
-    margin: 0 ;
+    /* margin: 0 ; */
+    position: relative;
 }
 
 /* 
@@ -102,6 +103,7 @@ ul{
     /* margin-left: auto;
     margin-right: auto; */
     margin: 0 auto;
+    /* position: relative; */
 }
 
 .main-header{
@@ -190,6 +192,7 @@ nav{
 
 .post-header{
     margin-bottom: 40px; 
+    /* sposition: relative; */
 }
 
 article{
@@ -217,3 +220,16 @@ nav a:link{
 nav a:link:last-child{
     margin-right: 0;
 }
+
+button{
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+position:absolute;
+/* top: 0;
+left: 0; */
+bottom: 50px;
+right: 50px;
+
+}
+
