--- a/02-HTML-Fundamentals/app.css
+++ b/02-HTML-Fundamentals/app.css
@@ -19,6 +19,7 @@ body{
     border: 4px solid black;
     width: 825px;
     margin: 50px auto;
+    position: relative;
 }
 
 .product-title{
@@ -44,6 +45,8 @@ body{
 
 .more-info:link,.more-info:visited  {
     color: black;
+    margin-bottom: 30px;
+    display: inline-block;
     
 }
 
@@ -84,3 +87,47 @@ body{
 background-color: #fff;
 border: 4px solid black;
  }
+
+ .sale{
+    background-color: #ec2f2f;
+    color: #fff;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
+    padding: 7px 15px;
+    display: inline-block;
+/* width: 40px; */
+    /* text-align: center; */
+    position:absolute;
+    top: -17px;
+    left: -38px;
+}
+
+.color{
+    background-color: #000;
+    height: 22px;
+    width: 22px;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.color-blue{
+    background-color: #2f6ee2;
+}
+
+.color-red{
+    background-color: #ec2f2f;
+}
+
+.color-yellow{
+    background-color: #f0bf1e;
+}
+
+.color-green{
+    background-color: #90cc20;
+}
+
+.color-brown{
+    background-color: #885214;
+}
